<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_cmake_ruff</name>
  <version>0.0.1</version>
  <description>CMake macros for ament_ruff</description>
  <maintainer email="benjamin.andrew@swri.org">Ben Andrew</maintainer>
  <license>BSD-3-Clause</license>

  <depend>ament_ruff</depend>
  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_test</buildtool_depend>

  <buildtool_export_depend>ament_ruff</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
